objects/UserSAMLAssertion__c.object
<CustomObject>
    <description>Technical object storing the SAML Assertion related to a user when this one logs in through SSO.</description>
    <fields>
        <fullName>Assertion__c</fullName>
        <description>The SAML Assertion generated to authenticate the user.</description>
        <label>SAML Assertion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecodedAssertion__c</fullName>
        <description>The SAML Assertion decoded from base 64.</description>
        <label>SAML Assertion (Decoded)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user the SAML assertion is associated to.</description>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserSAMLAssertion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID used for upsert operations.</description>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User SAML Assertion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UserId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SAML-{0000000}</displayFormat>
        <label>SAML Assertion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User SAML Assertions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>